# rscolcat

./: Cargo.toml  Dockerfile  musl-build
src/: col.rs  main.rs
src/cli/: def.rs  log.rs  mod.rs
src/cli/action/: concat.rs
