[package]
name = "rscolcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
fern = "0.6.2"
log = "0.4.20"
regex = "1.10.2"
time = { version = "0.3.31", features = ["std", "local-offset", "macros", "formatting" ] }
shellexpand = "3.1.0"
fnv = "1.0.7"
tempfile = "3.13.0"

[profile.release]
lto = true
